--- a/index.html
+++ b/index.html
@@ -24,26 +24,33 @@
 		/>
 	</head>
 	<body>
-		<div class="div-card">
-			<img
-				src="images/image-qr-code.png"
-				alt="QR code leading to frontend mentor's website"
-				class="qr-code"
-				width="200px"
-			/>
-			<br />
-			Improve your front-end skills by building projects 
-      <br>
-      <br>
-      Scan the QR code to
-			visit Frontend Mentor and take your coding skills to the next level
+		<div class="div-parent">
+			<div class="div-card">
+				<img
+					src="images/image-qr-code.png"
+					alt="QR code leading to frontend mentor's website"
+					class="qr-code"
+					width="200px"
+				/>
+				<br />
+				<p class="div-p-bold">
+					Improve your front-end skills by building projects
+				</p>
+
+				<p class="div-p-reg">
+					Scan the QR code to visit Frontend Mentor and take your coding skills
+					to the next level
+				</p>
+			</div>
 		</div>
 
-		<div class="attribution">
-			Challenge by
-			<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-				>Frontend Mentor</a
-			>. Coded by <a href="mailto:jpierce.coder@zohomail.com">John Pierce</a>.
-		</div>
+		<footer>
+			<div class="attribution">
+				Challenge by
+				<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+					>Frontend Mentor</a
+				>. Coded by <a href="mailto:jpierce.coder@zohomail.com">John Pierce</a>.
+			</div>
+		</footer>
 	</body>
 </html>
